Open repo (#9)
* OpenRepository.kt + dependencies

* replaced println with log

* repository opened with tests but they are failing

* moved files to openRepository package

* added SimpleGradle project that breaks everything

* added OpenRepositoryRunner.kt

* ignored those tests for now

* added DS_Store to gitignore

* TestOpenMocks.kt runner

* cleaned up the code a little

* preprocessing is now not a part of RepositoryOpener.kt

* added delete .idea folders preprocessing

* added an open-java-mocks action

* ktlintFormat

* sdkmanager "platforms;android-30"

* sdkmanager "platform-tools" "platforms;android-28"

* upload IDEA logs

* failing tests after merge

* GetRepositoryOpener.kt

* named steps of open-java-mocks

* added inplace preprocessing

* added inplace preprocessing (#12)

* added log messages and split into a separate github workflow

* ktlintFormat

* added download mock projects into Github Actions

* edited build.yml

* added docs fot getKotlinKavaPreprocessorManager and updated signature

* now submodules are downloaded with checkout@v2

* removed test from build.yml + some small fixes

* moved noInputError to FileTestUtil.kt

* added `testName` to `noInputError`

* merged + now repository opener opens the root if no build system roots are found

* cleaned up code and logs

* added `workflow_dispatch`

* renamed the test task

* added a script that clones the submodule

* removed a submodule

* added 1 line to readme

* github actions how uses Dockerfile

* added 2 commands for debugging

* added 2 commands for debugging

* added JAVA_MOCK_PROJECTS env variable

* smarted upload test report

* finished README.md and Dockerfile

* removed unintentional changes

* removed diffs

* fixed README.md and removed code-style step

* not test-on-projects uses Docker but only partially

* added android to Dockerfile

* removed this branch from test-on-proje